# robot-framework

./: .gitIgnore  hello_world.robot  log.html  output.xml  pyproject.toml  report.html
PageObjects/: forms_page.robot  login_page.robot  myTsel_home_page.robot  myTsel_intro_page.robot  myTsel_login_page.robot  swipe_page.robot
Resources/: common.robot
Tests/: forms_tests.robot  login_tests.robot  myTsel_login_test.robot  swipe_tests.robot
results/: log.html  output.xml  report.html
