[project]
name = "robot-framework"
version = "0.1.0"
description = "project-test"
authors = [
    {name = "Setyo nugroho",email = "setyo.nugroho@salt.co.id"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
